--- a/.classpath
+++ b/.classpath
@@ -10,7 +10,7 @@
 	<classpathentry kind="src" path="actions"/>
 	<classpathentry kind="src" path="interfaces"/>
 	<classpathentry kind="src" path="resources"/>
-	<classpathentry kind="lib" path="libWebDriverManager/webdrivermanager-5.3.1-fat.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManager/webdrivermanager-5.3.1-fat.jar" sourcepath="libSelenium/client-combined-3.141.59-sources.jar"/>
 	<classpathentry kind="lib" path="libSelenium/selenium-server-standalone-3.141.59.jar"/>
 	<classpathentry kind="lib" path="libSelenium/testng-6.14.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
